# VCF

./: .ci-generator-backend-note  .ci-trigger-vcf-runtime-regression-fix  .gitignore  AGENTS.md  CLAUDE.md  README.md  benchmark-native-final.txt  benchmark-results.txt  benchmark-single-vcf-tt-final-summary.md  benchmark-wasm-final.txt  makevcf-generator-balance.js  makevcf-generator-base.js  makevcf-generator-board.js  makevcf-generator-ci-trigger-2.js  makevcf-generator-ci-trigger.js  makevcf-generator-concentration.js  makevcf-generator-core.js  makevcf-generator-integrated.js  makevcf-generator-layer.js  makevcf-generator-main.js  makevcf-generator-order-mode.js  makevcf-generator-reuse-bonus.js  makevcf-generator-reuse-defender.js  makevcf-generator-reuse-hint.js  makevcf-generator-summary.js  makevcf-generator-unique.js  makevcf-generator-validate.js  makevcf-generator.html  makevcf-layout.js  makevcf-mobile.js  makevcf-optimized-search-v2.js  makevcf-optimized-search.js  makevcf.html  pattern-compare.html  pattern-compare.js  五子棋.md  新版Bitboard VCF規格.MD  規格書.MD  題目產生器規格.MD
app/: engine_node.js  main.js  package.json  preload.js
bitboard/: BitBoard256.h  README.md  bitboard.js  index.html
cpp/: Board.h  CMakeLists.txt  Constants.h  Evaluator.cpp  Evaluator.h  Main.cpp  README.md  Searcher.cpp  Searcher.h  Zobrist.h  host.cpp
cpp/web-ui/: README.md  server.js  server.py
cpp/web-ui/public/: app.js  index.html  styles.css
eval/: Evaluator.js  EvaluatorFirstVCF.js  EvaluatorJScript.js  EvaluatorOptimized.js  EvaluatorWebassembly.js  worker-first-vcf.js  worker-optimized.js  worker.js
rapfi/: .strict-exact-tt-ci  SOURCE.md  index.html  rapfi-app.js  rapfi-vcf-tools.js  (+44 more)
(+17 files in other folders)
